[project]
name    = "WinDeklar"
version = "0.3.0"
authors = [
  { name="Nicolas Jodal", email="jnj@genexus.com" },
]
description = "Create winforms in an easy, declarative way. Specially suited for Robotics applications"
readme      = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage"    = "https://github.com/njodal/WinDeklar"
"Bug Tracker" = "https://github.com/njodal/WinDeklar/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

